# gauss-mathtest-practice

./: .gitignore  README.md  app.py  firecrawl_fetch.py  firecrawl_gauss7_2025_contest.json  firecrawl_gauss_2025_solution.json  firecrawl_parser.py  gauss_2025_g7_raw.txt  local_parser.py  main.ipynb  main.py  pyproject.toml  test.ipynb  test2.ipynb
